--- a/includes/assets/latest-stories.css
+++ b/includes/assets/latest-stories.css
@@ -66,7 +66,7 @@
   margin-top: 8px;
 }
 
-.web-stories .story-content-overlay__date {
+.web-stories .story-content-overlay__author {
   margin-right: 8px;
 }
 
